k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    component: app
  ports:
    - port: 80
      targetPort: 80
