k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # - host: team.bakai4kg.gq
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
